<resources>
    <string name="app_name">ScheduleShare</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">设置</string>
    <string name="title_activity_login">Sign in</string>
    <string name="initial_nickname">游客%1$s</string>
    <string name="notify_one_newMsg">您有一条新消息</string>
    <string name="notify_request_addYou">请求添加你为朋友</string>
    <string name="pop_menu_delete_txt">删除</string>
    <string name="get_tencentKey_error">获取密钥失败，图片上传功能暂不可用，请稍后重试</string>
    <string name="upload_photo_fail">图片上传失败，请重试</string>
    <string name="photo_not_find">解析错误：图片不存在或已损坏</string>
    <string name="upload_photo_error">图片上传失败</string>
    <string name="about_title_txt">关于本APP(版本V1.0)</string>
    <string name="about_content_txt">\t\tSchedulingShare旨在分享和记录行程，起到一个提醒和共享的作用。\n
        \t\t用户可以在我的我的界面添加个人的行程信息，记录将保存在手机本地；
        也可在右上角将其分享出去，分享的内容上传网络并且出现在发现界面，其他用户可以查看和讨论。\n
        \t\t作为个人，可以将自己接下来的行程保存和分享，期待与看到它的人来一次偶然的相遇；\n
        \t\t作为组织，可以将接下来的一些重要活动详情共享出去，让更多人的知道。例如某场粉丝见面会，某场同学重聚会，某场爱好社见面会……\n
        \t\t作为官方，也可以将重要的事情公布于此，例如X月X日举行招聘会、在线笔试；X月X日是第几届中央重要会议的举行日；X月X日是国际某官方活动的颁布会……\n
        \t\t该APP乃本人作为学习和兴趣所研发而出（包括但不限于完成毕设……），其中有可能有技术不成熟的地方，若大家在使用的过程遇到什么问题，可以用万能办法：重启，卸载重装（数据会丢失），
        也可通过留言发送遇到的问题，我会综合大家所遇到的问题进行解决。若是遇到不可逆转的原因卸载重装而导致保存的记录不见，已分享的信息也许可以在后台重新找回，但是未分享的信息就无能为力了，还请大家见谅。\n
        \t\t有学习和交流的地方可以访问项目的github地址：https://github.com/Wzy65/ScheduleShare \n
        \t\t本APP仅供学习交流使用，请勿用于非法用途，谢谢！</string>
    <string name="advice_title_txt">欢迎大家留言</string>
    <string name="advice_title_hint">大家可以在这里留下关于你所遇到的问题或建议，并且留下联系方式。注意：若是遇到使用方面的问题，问题描述越详细越好，包括但不局限：当时操作的场景，APP的反应，例如白屏或闪退……</string>
    <string name="advice_send">提交</string>
    <string name="advice_error">留言内容不得为空</string>
    <string name="advice_send_success">提交成功</string>
    <string name="advice_send_fail">提交失败</string>
    <string name="prompt_phonenumber">账号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_userId">用户名不存在</string>
    <string name="error_invalid_password">密码不得少于6位</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">此项不能为空</string>
    <string name="error_login_fail">登录失败，请重试</string>
    <string name="login_register_tip">没有账号？点击注册</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register_phonenumber">账号(手机号)</string>
    <string name="error_register_phonenumber">账号必须为手机号</string>
    <string name="action_register">注册</string>
    <string name="prompt_password_confirm">重复密码确认</string>
    <string name="error_incorrect_password_confirm">两次密码不一致</string>
    <string name="register_success">注册成功</string>
    <string name="register_fail">注册失败，请重试</string>
    <string name="register_tip">返回</string>
    <string name="setting_toolbar_edit">编辑</string>
    <string name="setting_back_to_login">退出登录</string>
    <string name="setting_headIcon">头像</string>
    <string name="setting_nickname">昵称</string>
    <string name="setting_changepw">更换密码</string>
    <string name="setting_email">修改邮箱</string>
    <string name="setting_sexy">性别</string>
    <string name="setting_age">年龄</string>
    <string name="setting_area">地区</string>
    <string name="setting_update_success">修改成功</string>
    <string name="setting_update_fail">修改失败，请重试</string>
    <string name="setting_sexy_dialog_title">选择性别</string>
    <string name="setting_sexy_dialog_left_btn">取消</string>
    <string name="setting_sexy_dialog_right_btn">确认</string>
    <string name="setting_pw_ok">确认</string>
    <string name="setting_pw_original">请输入原密码</string>
    <string name="setting_pw_new">请输入新密码</string>
    <string name="setting_pw_confirm">再次输入新密码</string>
    <string name="setting_pw_error_origin">密码不正确，请重试</string>
    <string name="setting_pw_error_new">密码长度不得小于6</string>
    <string name="setting_pw_error_confirm">两次输入不一致，请重试</string>
    <string name="dialog_changeHeadIcon_title">更换封面</string>
    <string name="dialog_changeHeadIcon_camera">拍摄新图片</string>
    <string name="dialog_changeHeadIcon_album">从相册选择图片</string>
    <string name="dialog_sexy_male">男</string>
    <string name="dialog_sexy_female">女</string>
    <string name="dialog_sexy_secret">保密</string>
    <string name="setting_normal_hint_nickname">请输入新的昵称</string>
    <string name="error_setting_normal_nickname">长度必须大于1</string>
    <string name="setting_normal_hint_email">请输入新的邮箱</string>
    <string name="error_setting_normal_email">请输入正确的邮箱</string>
    <string name="setting_normal_hint_age">请输入年龄</string>
    <string name="error_setting_normal_age">必须为数字</string>
    <string name="setting_normal_hint_area">请输入您所在地域(如：珠海市)</string>
    <string name="error_setting_normal_area">请输入正确的地区名</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_settings">Settings</string>
    <string name="dialog_add_friend_hint">请输入对方的手机号</string>
    <string name="error_mistake_phoneNumber">请输入正确的手机号</string>
    <string name="error_mistake_isUser">不能添加自己</string>
    <string name="error_non_exist_user">用户不存在</string>
    <string name="dialog_add_friend_title">添加好友</string>
    <string name="dialog_add_friend_left_btn">取消</string>
    <string name="dialog_add_friend_right_btn">确认</string>
    <string name="tab_mainPage">首页</string>
    <string name="tab_friendPage">好友</string>
    <string name="tab_communityPage">发现</string>
    <string name="tab_minePage">我的</string>
    <string name="push_title">通知</string>
    <string name="push_btn">我知道了</string>
    <string name="backup_title">用户须知</string>
    <string name="backup_left_btn">暂不备份</string>
    <string name="backup_right_btn">知道了，开始备份</string>
    <string name="backup_detail_fial">行程：%1$s上传失败</string>
    <string name="backup_detail_error">行程空空如也，赶紧去创建一个吧！</string>
    <string name="backup_success">备份成功</string>
    <string name="backup_fail">备份失败或部分失败，请重试</string>
    <string name="backup_progress_title">加载</string>
    <string name="backup_progress_msg">正在努力上传，请耐心等候……</string>
    <string name="backup_msg">\t备份需要将个人行程上传网络，请保持网络畅通，不要关闭本界面\n\t注意，备份后远端会覆盖以前的记录，并且图片将以网络图片形式存在，请自行保存相关数据</string>
    <string name="recovery_title">用户须知</string>
    <string name="recovery_msg">\t恢复数据需要从网络下载，请保持网络畅通，不要关闭本界面\n\t注意，恢复后图片将以网络图片形式存在，访问需要连接网络,恢复成功后将删除服务端保存！</string>
    <string name="recovery_left_btn">取消恢复</string>
    <string name="recovery_right_btn">知道了，开始恢复</string>
    <string name="recovery_progress_title">加载</string>
    <string name="recovery_progress_msg">正在努力恢复数据，请耐心等候……</string>
    <string name="recovery_success">恢复成功</string>
    <string name="recovery_get_error">获取数据失败，请重试</string>
    <string name="recovery_get_zero">远端并不存在备份数据，请确认</string>
    <string name="recovery_fail">恢复失败或部分失败，请重试</string>
    <string name="nav_logout">退出</string>
    <string name="nav_retract">收起</string>
    <string name="nav_userinfo_nickname">昵称：%1$s</string>
    <string name="nav_userinfo_sexy_txt">性别：%1$s</string>
    <string name="nav_about_txt">关于</string>
    <string name="nav_leaveMsg_txt">留言</string>
    <string name="nav_backup_txt">备份</string>
    <string name="nav_recovery_txt">恢复</string>
    <string name="friendlist_newfriend">新的朋友</string>
    <string name="friendlist_friend_title">  好友列表</string>
    <string name="friendlist_dialog_title">提示</string>
    <string name="friendlist_dialog_msg">确定删除该好友？</string>
    <string name="friendlist_dialog_right_btn">确定</string>
    <string name="friendlist_dialog_left_btn">取消</string>
    <string name="friendlist_dialog_delete_success">成功删除好友</string>
    <string name="friendlist_item_adapter_positionKey">friend_list_position</string>
    <string name="newfriendlist_item_adapter_positionKey">position</string>
    <string name="newfriendlist_item_agree">同意</string>
    <string name="newfriendlist_item_agreeAdd">已添加</string>
    <string name="newfriendlist_toolbar">刷新</string>
    <string name="error_newfriendlist_connect_fail">连接服务器失败，请稍后重试</string>
    <string name="newfriendlist_agree_msg">我通过了你的好友验证请求，我们可以开始聊天了!</string>
    <string name="newfriendlist_agree_notify">同意添加你为好友</string>
    <string name="error_newfriendlist_addFriend_fail">添加好友失败</string>
    <string name="personal_page_all">全部</string>
    <string name="personal_page_share">已分享</string>
    <string name="personal_page_dialog_title">提示</string>
    <string name="personal_page_dialog_msg">确定删除该行程？</string>
    <string name="personal_page_dialog_left_btn">取消</string>
    <string name="personal_page_dialog_right_btn">确定</string>
    <string name="personal_page_delete_success">成功删除行程</string>
    <string name="personal_page_delete_fail">删除失败</string>
    <string name="personal_list_item_adapter_positionKey">personal_list_position</string>
    <string name="share_list_item_startTxt">开始：</string>
    <string name="share_list_item_endTxt">结束：</string>
    <string name="share_page_all">全部</string>
    <string name="share_page_share">已分享</string>
    <string name="share_page_dialog_title">提示</string>
    <string name="share_page_dialog_msg">确定删除该行程？</string>
    <string name="share_page_dialog_left_btn">取消</string>
    <string name="share_page_dialog_right_btn">确定</string>
    <string name="share_page_delete_success">成功删除行程</string>
    <string name="share_page_find_fail">刷新数据失败</string>
    <string name="share_page_find_no_more">已经到底啦</string>
    <string name="share_list_item_adapter_positionKey">share_list_position</string>
    <string name="main_horizontal_list_item_adapter_positionKey">main_horizontal_list_position</string>
    <string name="main_page_title_happen">即将要发生</string>
    <string name="main_page_title_share">动态-最近</string>
    <string name="main_page_title_collect">我的关注</string>
    <string name="userinfo_nickname">昵称：%1$s</string>
    <string name="userinfo_phonenumber">手机：%1$s</string>
    <string name="dialog_sendAddFriendMsg_title">发送好友申请</string>
    <string name="dialog_sendAddFriendMsg_hint">我是%1$s,很高兴认识你，可以加个好友吗?</string>
    <string name="dialog_sendAddFriendMsg_left_btn">取消</string>
    <string name="dialog_sendAddFriendMsg_right_btn">确认</string>
    <string name="userinfo_enter_personalPage">进入主页</string>
    <string name="userinfo_addfriend">添加好友</string>
    <string name="error_connect_fail">连接服务器失败，请稍后重试</string>
    <string name="userinfo_sendAddFriendMsg_seccess">好友请求发送成功，等待验证</string>
    <string name="userinfo_sendAddFriendMsg_fail">发送失败，请稍后重试</string>
    <string name="personal_list_item_startTxt">开始：</string>
    <string name="personal_list_item_endTxt">结束：</string>
    <string name="schedule_detail_title">请输入标题内容，不得多于20字</string>
    <string name="schedule_detail_look_comment">查看讨论</string>
    <string name="schedule_detail_contint_hint">在这里输入内容</string>
    <string name="schedule_detail_startTxt">开始时间：</string>
    <string name="schedule_detail_endTxt">结束时间：</string>
    <string name="schedule_detail_noDate_error">请选择大致时间</string>
    <string name="schedule_detail_graterDate_error">结束时间不能比开始时间小</string>
    <string name="schedule_detail_chooseDate">选择日期</string>
    <string name="schedule_detail_chooseTime">选择时间</string>
    <string name="schedule_detail_toolbar_menu_save">保存</string>
    <string name="schedule_detail_toolbar_menu_edit">编辑</string>
    <string name="schedule_detail_toolbar_menu_collect">收藏</string>
    <string name="schedule_detail_toolbar_menu_share">分享</string>
    <string name="schedule_detail_toolbar_menu_cancel_share">取消分享</string>
    <string name="schedule_detail_dialog_choosePhoto_title">插入图片</string>
    <string name="schedule_detail_dialog_choosePhoto_camera">拍摄新图片</string>
    <string name="schedule_detail_dialog_choosePhoto_album">从相册中选择图片</string>
</resources>