<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/gray2">
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/schedule_detail_startTxt"
            android:textColor="@color/black2"
            android:textSize="16sp"
            />

        <Button
            android:id="@+id/schedule_detail_startDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/schedule_detail_chooseDate"
            android:textColor="@color/black3"
            android:textSize="16sp"
            />

        <Button
            android:id="@+id/schedule_detail_startTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:hint="@string/schedule_detail_chooseTime"
            android:textColor="@color/black3"
            android:textSize="16sp"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/schedule_detail_endTxt"
            android:textColor="@color/black2"
            android:textSize="16sp"
            />

        <Button
            android:id="@+id/schedule_detail_endDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/schedule_detail_chooseDate"
            android:textColor="@color/black3"
            android:textSize="16sp"
            />

        <Button
            android:id="@+id/schedule_detail_endTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:hint="@string/schedule_detail_chooseTime"
            android:textColor="@color/black3"
            android:textSize="16sp"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/gray2">
    </View>

    <com.sendtion.xrichtext.RichTextEditor
        android:id="@+id/schedule_detail_contnt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        app:rt_editor_image_bottom="10"
        app:rt_editor_image_height="200"
        app:rt_editor_text_color="@color/black2"
        app:rt_editor_text_init_hint="@string/schedule_detail_contint_hint"
        app:rt_editor_text_line_space="6dp"
        app:rt_editor_text_size="16sp"
        />

</LinearLayout>