<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/advice_title_txt"
            android:textColor="@color/black2"
            android:textSize="24sp"/>

        <EditText
            android:id="@+id/advice_edit"
            android:gravity="top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_background"
            android:hint="@string/advice_title_hint"
            android:inputType="textMultiLine"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black3"
            android:textColorHint="@color/gray2"
            android:textSize="18sp"
            />


        <Button
            android:id="@+id/advice_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_press_ripple_bg_orange"
            android:text="@string/advice_send"
            android:textColor="@color/white"
            android:textSize="20sp"
            />

    </LinearLayout>
</ScrollView>